--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 /LICENSE filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
+*.ipynb filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
