--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,6 @@
 *.md filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
 *.ipynb filter=lfs diff=lfs merge=lfs -text
+*.py filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
