--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+model.pkl filter=lfs diff=lfs merge=lfs -text
 /LICENSE filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
