--- a/requirements.txt
+++ b/requirements.txt
@@ -1,230 +1,355 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_kmp_llvm
-aiofiles=23.1.0=pyhd8ed1ab_1
-aiohttp=3.8.5=py310h2372a71_0
-aiosignal=1.3.1=pyhd8ed1ab_0
-altair=5.0.1=pyhd8ed1ab_1
-anyio=3.7.1=pyhd8ed1ab_0
-aom=3.5.0=h27087fc_0
-async-timeout=4.0.2=pyhd8ed1ab_0
-attrs=23.1.0=pyh71513ae_1
-brotli=1.0.9=h166bdaf_9
-brotli-bin=1.0.9=h166bdaf_9
-brotli-python=1.0.9=py310hd8f1fbe_9
-bzip2=1.0.8=h7f98852_4
-ca-certificates=2023.7.22=hbcca054_0
-cairo=1.16.0=hbbf8b49_1016
-catalogue=2.0.9=py310hff52083_0
-certifi=2023.7.22=pyhd8ed1ab_0
-cffi=1.15.1=py310h255011f_3
-charset-normalizer=3.2.0=pyhd8ed1ab_0
-click=8.1.6=unix_pyh707e725_0
-colorama=0.4.6=pyhd8ed1ab_0
-confection=0.1.0=py310hfdc917e_0
-contourpy=1.1.0=py310hd41b1e2_0
-cuda-version=11.8=h70ddcb2_2
-cudatoolkit=11.8.0=h37601d7_11
-cudnn=8.8.0.121=h0800d71_1
-cycler=0.11.0=pyhd8ed1ab_0
-cymem=2.0.7=py310hd8f1fbe_1
-cython-blis=0.7.9=py310hde88566_1
-dataclasses=0.8=pyhc8e2a94_3
-dav1d=1.2.1=hd590300_0
-duckduckgo-search=3.8.4=pypi_0
-exceptiongroup=1.1.2=pyhd8ed1ab_0
-expat=2.5.0=hcb278e6_1
-fastai=2.7.11=pyhd8ed1ab_0
-fastapi=0.100.0=pyhd8ed1ab_0
-fastcore=1.5.29=pyhd8ed1ab_0
-fastdownload=0.0.7=pyhd8ed1ab_0
-fastprogress=1.0.3=pyhd8ed1ab_0
-ffmpeg=6.0.0=gpl_hdbbbd96_103
-ffmpy=0.3.0=pyhb6f538c_0
-filelock=3.12.2=pyhd8ed1ab_0
-font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-font-ttf-inconsolata=3.000=h77eed37_0
-font-ttf-source-code-pro=2.038=h77eed37_0
-font-ttf-ubuntu=0.83=hab24e00_0
-fontconfig=2.14.2=h14ed4e7_0
-fonts-conda-ecosystem=1=0
-fonts-conda-forge=1=0
-fonttools=4.41.1=py310h2372a71_0
-freetype=2.12.1=hca18f0e_1
-fribidi=1.0.10=h36c2ea0_0
-frozenlist=1.4.0=py310h2372a71_0
-fsspec=2023.6.0=pyh1a96a4e_0
-gettext=0.21.1=h27087fc_0
-gmp=6.2.1=h58526e2_0
-gnutls=3.7.8=hf3e180e_0
-gradio=3.23.0=pyhd8ed1ab_0
-graphite2=1.3.13=h58526e2_1001
-h11=0.14.0=pyhd8ed1ab_0
-h2=4.1.0=pyhd8ed1ab_0
-harfbuzz=7.3.0=hdb3a94d_0
-hpack=4.0.0=pyh9f0ad1d_0
-httpcore=0.17.3=pyhd8ed1ab_0
-httpx=0.24.1=pyhd8ed1ab_0
-huggingface_hub=0.16.4=pyhd8ed1ab_0
-hyperframe=6.0.1=pyhd8ed1ab_0
-icu=72.1=hcb278e6_0
-idna=3.4=pyhd8ed1ab_0
-importlib-metadata=6.8.0=pyha770c72_0
-importlib_resources=6.0.0=pyhd8ed1ab_1
-jinja2=3.1.2=pyhd8ed1ab_1
-joblib=1.3.0=pyhd8ed1ab_1
-jsonschema=4.18.4=pyhd8ed1ab_0
-jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
-kiwisolver=1.4.4=py310hbf28c38_1
-lame=3.100=h166bdaf_1003
-langcodes=3.3.0=pyhd8ed1ab_0
-lcms2=2.15=haa2dc70_1
-ld_impl_linux-64=2.40=h41732ed_0
-lerc=4.0.0=h27087fc_0
-libass=0.17.1=hc9aadba_0
-libblas=3.9.0=17_linux64_openblas
-libbrotlicommon=1.0.9=h166bdaf_9
-libbrotlidec=1.0.9=h166bdaf_9
-libbrotlienc=1.0.9=h166bdaf_9
-libcblas=3.9.0=17_linux64_openblas
-libdeflate=1.18=h0b41bf4_0
-libdrm=2.4.114=h166bdaf_0
-libexpat=2.5.0=hcb278e6_1
-libffi=3.4.2=h7f98852_5
-libgcc-ng=13.1.0=he5830b7_0
-libgfortran-ng=13.1.0=h69a702a_0
-libgfortran5=13.1.0=h15d22d2_0
-libglib=2.76.4=hebfc3b9_0
-libhwloc=2.9.1=nocuda_h7313eea_6
-libiconv=1.17=h166bdaf_0
-libidn2=2.3.4=h166bdaf_0
-libjpeg-turbo=2.1.5.1=h0b41bf4_0
-liblapack=3.9.0=17_linux64_openblas
-libnsl=2.0.0=h7f98852_0
-libopenblas=0.3.23=pthreads_h80387f5_0
-libopus=1.3.1=h7f98852_1
-libpciaccess=0.17=h166bdaf_0
-libpng=1.6.39=h753d276_0
-libprotobuf=3.21.12=h3eb15da_0
-libsqlite=3.42.0=h2797004_0
-libstdcxx-ng=13.1.0=hfd8a6a1_0
-libtasn1=4.19.0=h166bdaf_0
-libtiff=4.5.1=h8b53f26_0
-libunistring=0.9.10=h7f98852_0
-libuuid=2.38.1=h0b41bf4_0
-libva=2.19.0=hd590300_0
-libvpx=1.13.0=hcb278e6_0
-libwebp-base=1.3.1=hd590300_0
-libxcb=1.15=h0b41bf4_0
-libxml2=2.11.4=h0d562d8_0
-libzlib=1.2.13=hd590300_5
-linkify-it-py=2.0.0=pyhd8ed1ab_0
-llvm-openmp=16.0.6=h4dfa4b3_0
-lxml=4.9.3=pypi_0
-magma=2.6.2=hc72dce7_0
-markdown-it-py=2.2.0=pyhd8ed1ab_0
-markupsafe=2.1.3=py310h2372a71_0
-matplotlib-base=3.7.2=py310hf38f957_0
-mdit-py-plugins=0.3.3=pyhd8ed1ab_0
-mdurl=0.1.0=pyhd8ed1ab_0
-mkl=2022.2.1=h84fe81f_16997
-multidict=6.0.4=py310h1fa729e_0
-munkres=1.1.4=pyh9f0ad1d_0
-murmurhash=1.0.9=py310hd8f1fbe_1
-nccl=2.18.3.1=h12f7317_0
-ncurses=6.4=hcb278e6_0
-nettle=3.8.1=hc379101_1
-ninja=1.11.1=h924138e_0
-numpy=1.25.1=py310ha4c1d20_0
-openh264=2.3.1=hcb278e6_2
-openjpeg=2.5.0=hfec8fc6_2
-openssl=3.1.1=hd590300_1
-orjson=3.9.2=py310h1e2579a_0
-p11-kit=0.24.1=hc5aa10d_0
-packaging=23.1=pyhd8ed1ab_0
-pandas=2.0.3=py310h7cbd5c2_1
-pathy=0.10.2=pyhd8ed1ab_0
-pcre2=10.40=hc3806b6_0
-pillow=10.0.0=py310h582fbeb_0
-pixman=0.40.0=h36c2ea0_0
-pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
-platformdirs=3.9.1=pyhd8ed1ab_0
-pooch=1.7.0=pyha770c72_3
-preshed=3.0.8=py310hd8f1fbe_1
-pthread-stubs=0.4=h36c2ea0_1001
-pycparser=2.21=pyhd8ed1ab_0
-pydantic=1.10.12=py310h2372a71_0
-pydub=0.25.1=pyhd8ed1ab_0
-pygments=2.15.1=pyhd8ed1ab_0
-pyparsing=3.0.9=pyhd8ed1ab_0
-pysocks=1.7.1=pyha2e5f31_6
-python=3.10.12=hd12c33a_0_cpython
-python-dateutil=2.8.2=pyhd8ed1ab_0
-python-multipart=0.0.6=pyhd8ed1ab_0
-python-tzdata=2023.3=pyhd8ed1ab_0
-python_abi=3.10=3_cp310
-pytorch=1.13.1=cuda112py310he33e0d6_200
-pytz=2023.3=pyhd8ed1ab_0
-pyyaml=6.0=py310h5764c6d_5
-readline=8.2=h8228510_1
-referencing=0.30.0=pyhd8ed1ab_0
-requests=2.31.0=pyhd8ed1ab_0
-rich=13.4.2=pyhd8ed1ab_0
-rpds-py=0.9.2=py310hcb5633a_0
-scikit-learn=1.3.0=py310hf7d194e_0
-scipy=1.11.1=py310ha4c1d20_0
-semantic_version=2.10.0=pyhd8ed1ab_0
-setuptools=68.0.0=pyhd8ed1ab_0
-shellingham=1.5.1=pyhd8ed1ab_0
-six=1.16.0=pyh6c4a22f_0
-sleef=3.5.1=h9b69904_2
-smart_open=5.2.1=pyhd8ed1ab_0
-sniffio=1.3.0=pyhd8ed1ab_0
-socksio=1.0.0=pypi_0
-spacy=3.6.0=py310hfb6f7a9_0
-spacy-legacy=3.0.12=pyhd8ed1ab_0
-spacy-loggers=1.0.4=pyhd8ed1ab_0
-srsly=2.4.7=py310hc6cd4ac_0
-starlette=0.27.0=pyhd8ed1ab_0
-svt-av1=1.6.0=h59595ed_0
-tbb=2021.9.0=hf52228f_0
-thinc=8.1.10=py310hfb6f7a9_0
-threadpoolctl=3.2.0=pyha21a80b_0
-tk=8.6.12=h27826a3_0
-toolz=0.12.0=pyhd8ed1ab_0
-torchvision=0.14.1=cuda112py310hb1d1f80_1
-tqdm=4.65.0=pyhd8ed1ab_1
-typer=0.9.0=pyhd8ed1ab_0
-typing-extensions=4.7.1=hd8ed1ab_0
-typing_extensions=4.7.1=pyha770c72_0
-tzdata=2023c=h71feb2d_0
-uc-micro-py=1.0.1=pyhd8ed1ab_0
-unicodedata2=15.0.0=py310h5764c6d_0
-urllib3=2.0.4=pyhd8ed1ab_0
-uvicorn=0.23.1=py310hff52083_0
-wasabi=1.1.2=py310hff52083_0
-websockets=11.0.3=py310h2372a71_0
-wheel=0.41.0=pyhd8ed1ab_0
-x264=1!164.3095=h166bdaf_2
-x265=3.5=h924138e_3
-xorg-fixesproto=5.0=h7f98852_1002
-xorg-kbproto=1.0.7=h7f98852_1002
-xorg-libice=1.1.1=hd590300_0
-xorg-libsm=1.2.4=h7391055_0
-xorg-libx11=1.8.6=h8ee46fc_0
-xorg-libxau=1.0.11=hd590300_0
-xorg-libxdmcp=1.1.3=h7f98852_0
-xorg-libxext=1.3.4=h0b41bf4_2
-xorg-libxfixes=5.0.3=h7f98852_1004
-xorg-libxrender=0.9.11=hd590300_0
-xorg-renderproto=0.11.1=h7f98852_1002
-xorg-xextproto=7.3.0=h0b41bf4_1003
-xorg-xproto=7.0.31=h7f98852_1007
-xz=5.2.6=h166bdaf_0
-yaml=0.2.5=h7f98852_2
-yarl=1.9.2=py310h2372a71_0
-zipp=3.16.2=pyhd8ed1ab_0
-zlib=1.2.13=hd590300_5
-zstd=1.5.2=hfc55251_7
+absl-py==1.3.0
+ae-ffmpeg==1.1.1
+aiohttp==3.8.3
+aiosignal==1.3.1
+antlr4-python3-runtime==4.9.3
+anyio==3.6.1
+appdirs==1.4.4
+argcomplete==2.0.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astroid==2.15.6
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==21.2.0
+audioread==3.0.0
+auto-editor==23.12.1
+autopep8==2.0.2
+av==10.0.0
+Babel==2.11.0
+bcrypt==3.2.0
+beautifulsoup4==4.10.0
+beniget==0.4.1
+bleach==5.0.1
+blinker==1.4
+botocore==1.29.45
+Brotli==1.0.9
+build==0.10.0
+CacheControl==0.12.14
+caffeine==2.9.8
+certifi==2020.6.20
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==2.1.1
+cleo==2.0.1
+click==8.0.3
+click-shell==2.1
+cmake==3.26.1
+colorama==0.4.4
+command-not-found==0.3
+configobj==5.0.6
+crashtest==0.4.1
+cryptography==3.4.8
+cupshelpers==1.0
+customtkinter==5.1.2
+cycler==0.11.0
+dacite==1.7.0
+darkdetect==0.8.0
+dbus-python==1.2.18
+debugpy==1.6.5
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.13
+dill==0.3.6
+distlib==0.3.6
+distro==1.7.0
+distro-info===1.1build1
+dnspython==2.1.0
+docstring-to-markdown==0.12
+duckduckgo-images-api==1.0.0
+dulwich==0.21.5
+einops==0.6.0
+entrypoints==0.4
+eventkit==1.0.0
+eventlet==0.33.2
+ewmh==0.1.6
+fasteners==0.14.1
+fastjsonschema==2.16.2
+ffmpeg==1.4
+ffmpeg-python==0.2.0
+fiftyone-brain==0.9.2
+fiftyone-db==0.4.0
+filelock==3.12.2
+filterpy==1.4.5
+flake8==6.0.0
+fonttools==4.29.1
+fqdn==1.5.1
+frozenlist==1.3.3
+fs==2.4.12
+fsspec==2023.1.0
+ftfy==6.1.1
+fuse-python==1.0.2
+future==0.18.2
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.32
+glob2==0.7
+google-pasta==0.2.0
+gpg===1.20.0-unknown
+graphql-core==3.2.3
+greenlet==1.1.2
+grpcio==1.49.1
+h2==4.1.0
+h5py==3.7.0
+hpack==4.0.0
+html5lib==1.1
+httplib2==0.20.2
+huggingface-hub==0.16.4
+hypercorn==0.14.3
+hyperframe==6.0.1
+idna==3.4
+imageio==2.23.0
+img2pdf==0.4.2
+importlib-metadata==6.7.0
+indicator-cpufreq==0.2.2
+installer==0.7.0
+ipython-genutils==0.2.0
+isoduration==20.11.0
+isort==5.12.0
+jaraco.classes==3.2.3
+jax==0.4.8
+jedi==0.18.2
+jeepney==0.7.1
+Jinja2==3.0.3
+jmespath==1.0.1
+joblib==1.2.0
+json5==0.9.11
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter-events==0.5.0
+jupyter_client==7.4.8
+jupyter_core==5.1.2
+jupyter_server_terminals==0.4.3
+jupyterlab-pygments==0.2.2
+jupyterlab_server==2.18.0
+kaleido==0.2.1
+Keras-Preprocessing==1.1.2
+keyring==23.13.1
+kiwisolver==1.3.2
+kornia==0.6.9
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy-object-proxy==1.9.0
+libclang==14.0.6
+librosa==0.8.1
+lightning-utilities==0.6.0.post0
+lit==16.0.0
+llvmlite==0.38.1
+lockfile==0.12.2
+loguru==0.6.0
+lxml==4.8.0
+lz4==3.1.3+dfsg
+Markdown==3.3.6
+MarkupSafe==2.1.1
+matplotlib==3.5.1
+mccabe==0.7.0
+ml-dtypes==0.0.4
+mongoengine==0.24.2
+monotonic==1.6
+more-itertools==8.10.0
+motor==3.1.1
+mpmath==1.3.0
+msgpack==1.0.3
+multidict==6.0.4
+mutagen==1.45.1
+nbclient==0.7.2
+nbformat==5.7.1
+ndjson==0.3.1
+nest-asyncio==1.5.6
+netifaces==0.11.0
+networkx==2.8.8
+norbert==0.2.1
+notify2==0.3
+numba==0.55.2
+numpy==1.22.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.0
+olefile==0.46
+omegaconf==2.3.0
+opencv-python==4.7.0.68
+opencv-python-headless==4.7.0.68
+opensnitch-ui==1.6.0rc2
+opt-einsum==3.3.0
+packaging==23.0
+pandas==1.5.0
+pandocfilters==1.5.0
+parso==0.8.3
+patool==1.12
+pdfarranger==1.9.2
+pedalboard==0.7.4
+pexpect==4.8.0
+pikepdf==5.0.1+dfsg
+Pillow==9.4.0
+pip-autoremove==0.10.0
+pipdeptree==2.9.3
+Pivy==0.6.5
+pkginfo==1.9.6
+platformdirs==3.8.0
+plotly==5.11.0
+pluggy==1.2.0
+ply==3.11
+poetry==1.5.1
+poetry-core==1.6.1
+poetry-plugin-export==1.4.0
+pooch==1.6.0
+pprintpp==0.4.0
+priority==2.0.0
+prometheus-client==0.15.0
+prompt-toolkit==3.0.38
+protobuf==3.12.4
+proton-client==0.7.1
+protonvpn-cli==3.13.0
+protonvpn-gui==1.12.0
+protonvpn-nm-lib==3.14.0
+psutil==5.9.0
+ptyprocess==0.7.0
+pyasn==1.6.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.13
+pycairo==1.20.1
+pycodestyle==2.10.0
+pycparser==2.21
+pycryptodomex==3.11.0
+pycups==2.0.1
+pydantic==1.10.6
+pydocstyle==6.3.0
+pydub==0.25.1
+pyflakes==3.0.1
+Pygments==2.11.2
+PyGObject==3.42.1
+pyinotify==0.9.6
+PyJWT==2.3.0
+pylibacl==0.6.0
+pylint==2.17.5
+pymongo==4.3.3
+pynvim==0.4.3
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyproject_hooks==1.0.0
+PyQt5==5.15.9
+PyQt5-sip==12.12.1
+PyQt6==6.4.0
+PyQt6-Qt6==6.4.1
+PyQt6-sip==13.4.0
+pyqtgraph==0.13.1
+pyrsistent==0.19.3
+pyslp==0.1.7
+python-apt==2.4.0+ubuntu1
+python-dateutil==2.8.2
+python-gnupg==0.4.8
+python-json-logger==2.0.4
+python-libdiscid==2.0.1
+python-lsp-jsonrpc==1.0.0
+python-lsp-server==1.7.4
+python-slugify==4.0.0
+python-xlib==0.29
+pythondialog==3.5.1
+pythran==0.11.0
+pytoolconfig==1.2.5
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
+pyxattr==0.7.2
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==24.0.1
+qt-material==2.12
+rapidfuzz==2.15.1
+regex==2022.10.31
+requests==2.28.1
+requests-toolbelt==0.9.1
+resampy==0.4.2
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+rope==1.9.0
+rsa==4.9
+s3transfer==0.6.0
+safeeyes==2.0.6
+scikit-learn==1.1.2
+scipy==1.8.0
+scour==0.38.2
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
+Send2Trash==1.8.0
+sentencepiece==0.1.97
+shadowsocks==2.8.2
+shellingham==1.5.0.post1
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+sounddevice==0.4.5
+soundfile==0.11.0
+soupsieve==2.3.1
+sse-starlette==0.10.3
+sseclient-py==1.7.2
+stftpitchshift==1.5.1
+sympy==1.11.1
+systemd-python==234
+tabulate==0.9.0
+tenacity==8.1.0
+tensorflow-io-gcs-filesystem==0.27.0
+termcolor==2.0.1
+terminado==0.17.1
+terminator==2.1.1
+threadpoolctl==3.1.0
+tifffile==2022.10.10
+tinycss2==1.2.1
+TLPUI==1.5.0.post5
+tokenizers==0.13.2
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.8
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.8.0
+triton==2.0.0
+trove-classifiers==2023.5.24
+typer==0.3.2
+typing_extensions==4.7.1
+tzdata==2022.7
+tzlocal==4.2
+ubuntu-drivers-common==0.0.0
+ufoLib2==0.13.1
+ufw==0.36.1
+ujson==5.8.0
+unicodedata2==14.0.0
+Unidecode==1.3.3
+universal-analytics-python3==1.1.1
+uri-template==1.2.0
+urllib3==1.26.15
+virtualenv==20.23.1
+wadllib==1.3.6
+Wave==0.0.2
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.4.2
+websockets==9.1
+Werkzeug==2.2.2
+whatthepatch==1.0.5
+wrapt==1.14.1
+wsproto==1.2.0
+xdg==5
+xkit==0.0.0
+xmltodict==0.13.0
+yapf==0.40.1
+yarl==1.8.2
+youtube-dl==2021.12.17
+yt-dlp==2022.4.8
+zipp==1.0.0
