--- a/requirements.txt
+++ b/requirements.txt
@@ -1,355 +1,3 @@
-absl-py==1.3.0
-ae-ffmpeg==1.1.1
-aiohttp==3.8.3
-aiosignal==1.3.1
-antlr4-python3-runtime==4.9.3
-anyio==3.6.1
-appdirs==1.4.4
-argcomplete==2.0.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-astroid==2.15.6
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==21.2.0
-audioread==3.0.0
-auto-editor==23.12.1
-autopep8==2.0.2
-av==10.0.0
-Babel==2.11.0
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-beniget==0.4.1
-bleach==5.0.1
-blinker==1.4
-botocore==1.29.45
-Brotli==1.0.9
-build==0.10.0
-CacheControl==0.12.14
-caffeine==2.9.8
-certifi==2020.6.20
-cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==2.1.1
-cleo==2.0.1
-click==8.0.3
-click-shell==2.1
-cmake==3.26.1
-colorama==0.4.4
-command-not-found==0.3
-configobj==5.0.6
-crashtest==0.4.1
-cryptography==3.4.8
-cupshelpers==1.0
-customtkinter==5.1.2
-cycler==0.11.0
-dacite==1.7.0
-darkdetect==0.8.0
-dbus-python==1.2.18
-debugpy==1.6.5
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.13
-dill==0.3.6
-distlib==0.3.6
-distro==1.7.0
-distro-info===1.1build1
-dnspython==2.1.0
-docstring-to-markdown==0.12
-duckduckgo-images-api==1.0.0
-dulwich==0.21.5
-einops==0.6.0
-entrypoints==0.4
-eventkit==1.0.0
-eventlet==0.33.2
-ewmh==0.1.6
-fasteners==0.14.1
-fastjsonschema==2.16.2
-ffmpeg==1.4
-ffmpeg-python==0.2.0
-fiftyone-brain==0.9.2
-fiftyone-db==0.4.0
-filelock==3.12.2
-filterpy==1.4.5
-flake8==6.0.0
-fonttools==4.29.1
-fqdn==1.5.1
-frozenlist==1.3.3
-fs==2.4.12
-fsspec==2023.1.0
-ftfy==6.1.1
-fuse-python==1.0.2
-future==0.18.2
-gast==0.4.0
-gitdb==4.0.10
-GitPython==3.1.32
-glob2==0.7
-google-pasta==0.2.0
-gpg===1.20.0-unknown
-graphql-core==3.2.3
-greenlet==1.1.2
-grpcio==1.49.1
-h2==4.1.0
-h5py==3.7.0
-hpack==4.0.0
-html5lib==1.1
-httplib2==0.20.2
-huggingface-hub==0.16.4
-hypercorn==0.14.3
-hyperframe==6.0.1
-idna==3.4
-imageio==2.23.0
-img2pdf==0.4.2
-importlib-metadata==6.7.0
-indicator-cpufreq==0.2.2
-installer==0.7.0
-ipython-genutils==0.2.0
-isoduration==20.11.0
-isort==5.12.0
-jaraco.classes==3.2.3
-jax==0.4.8
-jedi==0.18.2
-jeepney==0.7.1
-Jinja2==3.0.3
-jmespath==1.0.1
-joblib==1.2.0
-json5==0.9.11
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.5.0
-jupyter_client==7.4.8
-jupyter_core==5.1.2
-jupyter_server_terminals==0.4.3
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.18.0
-kaleido==0.2.1
-Keras-Preprocessing==1.1.2
-keyring==23.13.1
-kiwisolver==1.3.2
-kornia==0.6.9
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy-object-proxy==1.9.0
-libclang==14.0.6
-librosa==0.8.1
-lightning-utilities==0.6.0.post0
-lit==16.0.0
-llvmlite==0.38.1
-lockfile==0.12.2
-loguru==0.6.0
-lxml==4.8.0
-lz4==3.1.3+dfsg
-Markdown==3.3.6
-MarkupSafe==2.1.1
-matplotlib==3.5.1
-mccabe==0.7.0
-ml-dtypes==0.0.4
-mongoengine==0.24.2
-monotonic==1.6
-more-itertools==8.10.0
-motor==3.1.1
-mpmath==1.3.0
-msgpack==1.0.3
-multidict==6.0.4
-mutagen==1.45.1
-nbclient==0.7.2
-nbformat==5.7.1
-ndjson==0.3.1
-nest-asyncio==1.5.6
-netifaces==0.11.0
-networkx==2.8.8
-norbert==0.2.1
-notify2==0.3
-numba==0.55.2
-numpy==1.22.4
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.0
-olefile==0.46
-omegaconf==2.3.0
-opencv-python==4.7.0.68
-opencv-python-headless==4.7.0.68
-opensnitch-ui==1.6.0rc2
-opt-einsum==3.3.0
-packaging==23.0
-pandas==1.5.0
-pandocfilters==1.5.0
-parso==0.8.3
-patool==1.12
-pdfarranger==1.9.2
-pedalboard==0.7.4
-pexpect==4.8.0
-pikepdf==5.0.1+dfsg
-Pillow==9.4.0
-pip-autoremove==0.10.0
-pipdeptree==2.9.3
-Pivy==0.6.5
-pkginfo==1.9.6
-platformdirs==3.8.0
-plotly==5.11.0
-pluggy==1.2.0
-ply==3.11
-poetry==1.5.1
-poetry-core==1.6.1
-poetry-plugin-export==1.4.0
-pooch==1.6.0
-pprintpp==0.4.0
-priority==2.0.0
-prometheus-client==0.15.0
-prompt-toolkit==3.0.38
-protobuf==3.12.4
-proton-client==0.7.1
-protonvpn-cli==3.13.0
-protonvpn-gui==1.12.0
-protonvpn-nm-lib==3.14.0
-psutil==5.9.0
-ptyprocess==0.7.0
-pyasn==1.6.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAudio==0.2.13
-pycairo==1.20.1
-pycodestyle==2.10.0
-pycparser==2.21
-pycryptodomex==3.11.0
-pycups==2.0.1
-pydantic==1.10.6
-pydocstyle==6.3.0
-pydub==0.25.1
-pyflakes==3.0.1
-Pygments==2.11.2
-PyGObject==3.42.1
-pyinotify==0.9.6
-PyJWT==2.3.0
-pylibacl==0.6.0
-pylint==2.17.5
-pymongo==4.3.3
-pynvim==0.4.3
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyproject_hooks==1.0.0
-PyQt5==5.15.9
-PyQt5-sip==12.12.1
-PyQt6==6.4.0
-PyQt6-Qt6==6.4.1
-PyQt6-sip==13.4.0
-pyqtgraph==0.13.1
-pyrsistent==0.19.3
-pyslp==0.1.7
-python-apt==2.4.0+ubuntu1
-python-dateutil==2.8.2
-python-gnupg==0.4.8
-python-json-logger==2.0.4
-python-libdiscid==2.0.1
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.7.4
-python-slugify==4.0.0
-python-xlib==0.29
-pythondialog==3.5.1
-pythran==0.11.0
-pytoolconfig==1.2.5
-pytz==2022.1
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.4.1
-pyxattr==0.7.2
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==24.0.1
-qt-material==2.12
-rapidfuzz==2.15.1
-regex==2022.10.31
-requests==2.28.1
-requests-toolbelt==0.9.1
-resampy==0.4.2
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rope==1.9.0
-rsa==4.9
-s3transfer==0.6.0
-safeeyes==2.0.6
-scikit-learn==1.1.2
-scipy==1.8.0
-scour==0.38.2
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-Send2Trash==1.8.0
-sentencepiece==0.1.97
-shadowsocks==2.8.2
-shellingham==1.5.0.post1
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-sounddevice==0.4.5
-soundfile==0.11.0
-soupsieve==2.3.1
-sse-starlette==0.10.3
-sseclient-py==1.7.2
-stftpitchshift==1.5.1
-sympy==1.11.1
-systemd-python==234
-tabulate==0.9.0
-tenacity==8.1.0
-tensorflow-io-gcs-filesystem==0.27.0
-termcolor==2.0.1
-terminado==0.17.1
-terminator==2.1.1
-threadpoolctl==3.1.0
-tifffile==2022.10.10
-tinycss2==1.2.1
-TLPUI==1.5.0.post5
-tokenizers==0.13.2
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.11.8
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.8.0
-triton==2.0.0
-trove-classifiers==2023.5.24
-typer==0.3.2
-typing_extensions==4.7.1
-tzdata==2022.7
-tzlocal==4.2
-ubuntu-drivers-common==0.0.0
-ufoLib2==0.13.1
-ufw==0.36.1
-ujson==5.8.0
-unicodedata2==14.0.0
-Unidecode==1.3.3
-universal-analytics-python3==1.1.1
-uri-template==1.2.0
-urllib3==1.26.15
-virtualenv==20.23.1
-wadllib==1.3.6
-Wave==0.0.2
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.4.2
-websockets==9.1
-Werkzeug==2.2.2
-whatthepatch==1.0.5
-wrapt==1.14.1
-wsproto==1.2.0
-xdg==5
-xkit==0.0.0
-xmltodict==0.13.0
-yapf==0.40.1
-yarl==1.8.2
-youtube-dl==2021.12.17
-yt-dlp==2022.4.8
-zipp==1.0.0
+fastai==2.7.12
+pandas==2.0.3
+duckduckgo-search==3.8.4
